# KartikMusic

./: .dockerignore  .gitignore  Dockerfile  Procfile  app.json  block.yml  check_locales.py  config.py  heroku.yml  pyproject.toml  sample.env  setup  start  sync_locales.py
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: block.yml  main.yml
KartikMusic/: __init__.py  __main__.py
KartikMusic/core/: bot.py  calls.py  dir.py  lang.py  mongo.py  telegram.py  userbot.py  youtube.py
KartikMusic/helpers/: __init__.py  _admins.py  _dataclass.py  _exec.py  _inline.py  _play.py  _queue.py  _thumbnails.py  _utilities.py
KartikMusic/locales/: README.md  ar.json  de.json  fr.json  hi.json  ru.json
KartikMusic/plugins/: __init__.py  active.py  auth.py  autoplay.py  blacklist.py  broadcast.py  callbacks.py  eval.py  iquery.py  language.py  loop.py  misc.py  pause.py  ping.py  play.py  queue.py  restart.py  resume.py  seek.py  skip.py  song.py  speed.py  start.py  stats.py  stop.py  sudoers.py  thumb.py  vclogger.py
anony/: __init__.py  __main__.py
anony/core/: calls.py  youtube.py
anony/helpers/: _inline.py  _thumbnails.py
anony/locales/: en.json  es.json  hi.json  ja.json  my.json  pa.json  pt.json  tr.json  zh.json
anony/plugins/: callbacks.py  vclogger.py
