#
# Copyright (C) 2025-present by TheAloneTeam@Github, < https://github.com/TheAloneTeam >.
#
# This file is part of < https://github.com/TheAloneTeam/KartikMusic > project,
# and is released under the "MIT License".
# Please see < https://github.com/TheAloneTeam/KartikMusic/blob/master/LICENSE >
#
# All rights reserved.
#

[project]
name = "KartikMusic"
version = "3.0.3"
description = "A powerful Telegram Music Bot for Group Voice Chats, supporting high-quality audio and video streaming."
readme = ".github/README.md"
requires-python = ">=3.10"
keywords = ["telegram", "music-bot", "voice-chat", "python", "pyrogram", "kartik-music"]

[project.urls]
Homepage = "https://github.com/TheAloneTeam/KartikMusic"
Repository = "https://github.com/TheAloneTeam/KartikMusic"

dependencies = [
    "aiohttp~=3.14.0",
    "kurigram>=2.2.21",
    "pillow~=12.2.0",
    "psutil~=7.2.2",
    "py-tgcalls~=2.3.0",
    "py-yt-search>=0.6.2,<0.8.0",
    "pymongo>=4.16.0",
    "pytgcrypto>=1.2.11",
    "python-dotenv~=1.2.1",
    "yt-dlp[default]>=2026.3.17",
]
